--- a/heartdisease.ipynb
+++ b/heartdisease.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Sex_male  age  currentSmoker  cigsPerDay  BPMeds  prevalentStroke  \\\n",
+      "0         1   39              0         0.0     0.0                0   \n",
+      "1         0   46              0         0.0     0.0                0   \n",
+      "2         1   48              1        20.0     0.0                0   \n",
+      "3         0   61              1        30.0     0.0                0   \n",
+      "4         0   46              1        23.0     0.0                0   \n",
+      "\n",
+      "   prevalentHyp  diabetes  totChol  sysBP  diaBP    BMI  heartRate  glucose  \\\n",
+      "0             0         0    195.0  106.0   70.0  26.97       80.0     77.0   \n",
+      "1             0         0    250.0  121.0   81.0  28.73       95.0     76.0   \n",
+      "2             0         0    245.0  127.5   80.0  25.34       75.0     70.0   \n",
+      "3             1         0    225.0  150.0   95.0  28.58       65.0    103.0   \n",
+      "4             0         0    285.0  130.0   84.0  23.10       85.0     85.0   \n",
+      "\n",
+      "   TenYearCHD  \n",
+      "0           0  \n",
+      "1           0  \n",
+      "2           0  \n",
+      "3           1  \n",
+      "4           0   (3751, 15)\n",
+      "TenYearCHD\n",
+      "0    3179\n",
+      "1     572\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# removing NaN / NULL values\n",
     "disease_df.dropna(axis = 0, inplace = True)\n",
@@ -53,15 +84,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set: (2625, 6) (2625,)\n",
+      "Test set: (1126, 6) (1126,)\n"
+     ]
+    }
+   ],
    "source": [
     "X = np.asarray(disease_df[['age', 'Sex_male', 'cigsPerDay', \n",
     "                           'totChol', 'sysBP', 'glucose']])\n",
     "y = np.asarray(disease_df['TenYearCHD'])\n",
-    "x = preprocessing\n",
-    "\n",
-    "# normalization of the dataset\n",
-    "X = preprocessing.StandardScaler().fit(X).transform(X)\n",
     "\n",
     "# Train-and-Test -Split\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -79,7 +115,7 @@
    "outputs": [],
    "source": [
     "# counting no. of patients affected with CHD\n",
-    "x = plt\n",
+    "\n",
     "plt.figure(figsize=(7, 5))\n",
     "sns.countplot(x='TenYearCHD', data=disease_df,\n",
     "             palette=\"BuGn_r\")\n",
@@ -88,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the model is = 0.8490230905861457\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluation and accuracy\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -114,9 +158,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The details for confusion matrix is =\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.99      0.92       951\n",
+      "           1       0.61      0.08      0.14       175\n",
+      "\n",
+      "    accuracy                           0.85      1126\n",
+      "   macro avg       0.73      0.54      0.53      1126\n",
+      "weighted avg       0.82      0.85      0.80      1126\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Confusion matrix \n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
@@ -126,10 +187,6 @@
     "                           columns = ['Predicted:0', 'Predicted:1'], \n",
     "                           index =['Actual:0', 'Actual:1'])\n",
     "\n",
-    "plt.figure(figsize = (8, 5))\n",
-    "sns.heatmap(conf_matrix, annot = True, fmt = 'd', cmap = \"Greens\")\n",
-    "\n",
-    "plt.show()\n",
     "print('The details for confusion matrix is =')\n",
     "print (classification_report(y_test, y_pred))"
    ]
@@ -137,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
